testsuite/tests/typecheck/should_fail/T26532.stderr
T26532.hs:11:9: error: [GHC-39999]
    • No instance for ‘Typeable (forall a. a -> a)’
        arising from a use of ‘typeRep’
      NB: ‘forall a. a -> a’ is a polymorphic type
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘test1’: test1 = typeRep

T26532.hs:14:9: error: [GHC-39999]
    • No instance for ‘Typeable (Eq Int => Int)’
        arising from a use of ‘typeRep’
      NB: ‘Eq Int => Int’ is a qualified type
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘test2’: test2 = typeRep

T26532.hs:17:9: error: [GHC-39999]
    • No instance for ‘Typeable
                         ((() :: Constraint, () :: Constraint) => Int)’
        arising from a use of ‘typeRep’
      NB: ‘(() :: Constraint, () :: Constraint) =>
           Int’ is a qualified type
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘test3’: test3 = typeRep

T26532.hs:20:9: error: [GHC-39999]
    • No instance for ‘Typeable (# | #)’
        arising from a use of ‘typeRep’
      NB: ‘(# | #)’ is an unboxed sum type
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘test4’: test4 = typeRep

T26532.hs:26:9: error: [GHC-39999]
    • No instance for ‘Typeable (F Int)’
        arising from a use of ‘typeRep’
      NB: ‘F Int’ is an unreduced type family application
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘test5’: test5 = typeRep

T26532.hs:35:9: error: [GHC-39999]
    • No instance for ‘Typeable ProxyPolyDF’
        arising from a use of ‘typeRep’
      NB: The kind of ‘ProxyPolyDF’
        ‘(forall k. * -> k) -> *’ contains foralls,
      for which the built-in ‘Typeable’ solver cannot produce evidence.
    • In the expression: typeRep
      In an equation for ‘test6’: test6 = typeRep
